--- a/src/sample/Login.css
+++ b/src/sample/Login.css
@@ -9,6 +9,20 @@
     -fx-effect: dropshadow(gaussian, lime, 0, 1, 0, 5);
 }
 
+root {
+    display: block;
+}
+.root {
+    -fx-background-image: url(https://i.redd.it/7oq13qrc25h31.jpg);
+    -fx-background-size: contain;
+}
+.label {
+    -fx-font-size: 12px;
+    -fx-font-weight: bold;
+    -fx-text-fill: #333333;
+    -fx-effect: dropshadow( gaussian , rgba(255,255,255,0.5) , 0,0,0,1 );
+}
+
 #welcome-text {
     -fx-font-size: 32px;
     -fx-font-family: Consolas;
@@ -20,6 +34,14 @@
     -fx-fill: teal;
     -fx-font-weight: bold;
     -fx-effect: dropshadow(gaussian, rgba(255, 255, 255, 0.5), 0, 0, 0, 1);
+    -fx-font-family: "Arial Black";
+    -fx-fill: #818181;
+    -fx-effect: innershadow( three-pass-box , rgba(0,0,0,0.7) , 6, 0.0 , 0 , 2 );
+}
+#actiontarget {
+    -fx-fill: FIREBRICK;
+    -fx-font-weight: bold;
+    -fx-effect: dropshadow( gaussian , rgba(255,255,255,0.5) , 0,0,0,1 );
 }
 
 .button {
