--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,8 +1,74 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
+<?language javascript?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<GridPane fx:controller="sample.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.Text?>
+<?import java.net.URL?>
+<GridPane
+    xmlns:fx="http://javafx.com/fxml"
+    alignment="center"
+    hgap="10"
+    vgap="10"
+    styleClass="root">
+
+    <stylesheets>
+        <URL value="@Login.css"/>
+    </stylesheets>
+
+    <fx:script>
+        function handleSubmitButtonAction() {
+            actiontarget.setText("Called from JavaScript!")
+        }
+    </fx:script>
+
+    <padding>
+        <Insets
+            top="25"
+            right="25"
+            bottom="10"
+            left="25"
+        />
+    </padding>
+
+    <Text
+        text="Welcome"
+        id="welcome-text"
+        GridPane.columnIndex="0"
+        GridPane.rowIndex="0"
+        GridPane.columnSpan="2"/>
+
+    <Label
+        text="User Name:"
+        GridPane.columnIndex="0"
+        GridPane.rowIndex="1"/>
+
+    <TextField
+        GridPane.columnIndex="1"
+        GridPane.rowIndex="1"/>
+
+    <Label
+        text="Password:"
+        GridPane.columnIndex="0"
+        GridPane.rowIndex="2"/>
+
+    <PasswordField
+        fx:id="passwordField"
+        GridPane.columnIndex="1"
+        GridPane.rowIndex="2"/>
+
+    <HBox
+        spacing="10"
+        alignment="bottom_right"
+        GridPane.columnIndex="1"
+        GridPane.rowIndex="4">
+        <Button
+            text="Sign In"
+            onAction="handleSubmitButtonAction(event)"/>
+    </HBox>
+
+    <Text
+        fx:id="actiontarget"
+        GridPane.columnIndex="1"
+        GridPane.rowIndex="6"/>
 </GridPane>
